--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/test": "^8.6.2",
     "@storybook/vue3": "^8.6.2",
     "@tailwindcss/vite": "^4.0.9",
+    "@whitespace/storybook-addon-html": "^6.1.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
