--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-vue-next": "^0.399.0",
     "nuxt": "^3.12.2",
     "radix-vue": "^1.8.5",
+    "reka-ui": "^2.0.2",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
